--- a/utilities/CMakeLists.txt
+++ b/utilities/CMakeLists.txt
@@ -1,4 +1,7 @@
-cmake_minimum_required(VERSION 3.5.0)
+cmake_minimum_required(VERSION 3.11.0)
 
+project(utilities)
+
+add_subdirectory(core)
 add_subdirectory(logger)
 add_subdirectory(printer)
