--- a/casting/CMakeLists.txt
+++ b/casting/CMakeLists.txt
@@ -5,7 +5,7 @@ project(casting)
 add_compile_options(-std=gnu++17)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
-link_libraries(colson_printer)
+link_libraries(cslPrinter)
 
 add_executable(${PROJECT_NAME}_const_cast const_cast.cpp)
 add_executable(${PROJECT_NAME}_static_cast static_cast.cpp)
